Updated next, updated logic. no new changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     ".next/types/**/*.ts",
     "app/(ui)/page.js",
     "app/(ui)/skills/skills-data.js",
-    "app/(ui)/projects/projects-data.js"
+    "app/(ui)/projects/projects-data.ts"
   ],
   "exclude": ["node_modules"]
 }
