--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.5",
-    "next": "14.0.2",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18"
   },
