Animation issues in prod build fixed.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/(ui)/page.js",
-    "app/(ui)/skills/skills-data.js",
+    "app/(ui)/skills/skills-data.ts",
     "app/(ui)/projects/projects-data.ts"
   ],
   "exclude": ["node_modules"]
