--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cus": "next build && next start"
   },
   "dependencies": {
     "framer-motion": "^10.16.5",
     "next": "^14.2.17",
+    "nodemon": "^3.1.7",
     "react": "^18",
     "react-dom": "^18"
   },
